--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
         <div class="mid">
                 <ul class="navbar">
                     <li><a href="#">Home</a></li>
-                    <li><a href="/AboutUs.html"> About Us</a></li>  <!--linking about us html file here -->
-                    <li><a href="/ContactUs.html"> Contact Us</a></li>
-                    <li><a href="/Feedback.html">Feedback</a></li>
+                    <li><a href="./AboutUs.html"> About Us</a></li>  <!--linking about us html file here -->
+                    <li><a href="./ContactUs.html"> Contact Us</a></li>
+                    <li><a href="./Feedback.html">Feedback</a></li>
                 </ul>
         </div>
         <div class="right">
