--- a/AboutUs.html
+++ b/AboutUs.html
@@ -82,10 +82,10 @@ At <B>FASHION CLOTHES</B>, we carefully curate our collections to ensure that yo
     </div>
     <div class="mid">
         <ul class="navbar">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/AboutUs.html"> About Us</a></li>  <!--linking about us html file here -->
-            <li><a href="/ContactUs.html"> Contact Us</a></li>
-            <li><a href="/Feedback.html">Feedback</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="AboutUs.html"> About Us</a></li>  <!--linking about us html file here -->
+            <li><a href="ContactUs.html"> Contact Us</a></li>
+            <li><a href="Feedback.html">Feedback</a></li>
         </ul>
 </div>
 <div class="right">
