--- a/ContactUs.html
+++ b/ContactUs.html
@@ -83,10 +83,10 @@
     </div>
     <div class="mid">
         <ul class="navbar">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/AboutUs.html"> About Us</a></li>  <!--linking about us html file here -->
-            <li><a href="/ContactUs.html"> Contact Us</a></li>
-            <li><a href="/Feedback.html">Feedback</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="AboutUs.html"> About Us</a></li>  <!--linking about us html file here -->
+            <li><a href="ContactUs.html"> Contact Us</a></li>
+            <li><a href="Feedback.html">Feedback</a></li>
         </ul>
 </div>
     <div class="container">
